# automac

./: .gitignore  README.md  USEFUL.md  automac.py  automac.sh  base.py  example-basic.py  pyproject.toml  tools-install.sh  util.py
features/: appcleaner.py  apps.py  brew.py  defaults.py  exec.py  fileassoc.py  files.py  iina.py  inputlang.py  iterm2.py  notifications.py  scutil.py  system.py
